--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -6,6 +6,14 @@
   ],
   "links": [
     {
+      "name": "HTML Sizes",
+      "display_url": "html-sizes.alanwsmith.com",
+      "url": "https://html-sizes.alanwsmith.com",
+      "description": [
+        "A quick, visual reference for the various ways to get sizes and postions of HTML elements with JavaScript."
+      ]
+    },
+    {
       "name": "Grid Web Component",
       "display_url": "grid.alanwsmith.com",
       "url": "https://grid.alanwsmith.com",
