added weird web october

--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -7,6 +7,14 @@
 
   "links": [
     {
+      "name": "Weird Web October - 2025",
+      "display_url": "wwo-2025-0.alanwsmith.com",
+      "url": "https://wwo-2025-0.alanwsmith.com/",
+      "description": [
+        "My run at Weird Web October 2025 Edition. I made it 18 days. It was a great test run for bitty, but after 18 days I knew enough about what I wanted to do next and didn't want to wait any more to do the work. "
+      ]
+    },
+    {
       "name": "Background Texture Maker",
       "display_url": "texture.alanwsmith.com",
       "url": "https://texture.alanwsmith.com",
